@startuml DomainModelExcerpt
'https://plantuml.com/use-case-diagram

rectangle #36827F{
class Building  << Root >> << Entity >>
class BuildingDescription  << (v,#A4C2E5) ValueObject >>
class BuildingName  << (v,orange) ValueObject >> << unique >>
}

Building "*"-->"0..1" BuildingDescription
Building "1"-->"1" BuildingName

@enduml